--- a/public/panel/index.html
+++ b/public/panel/index.html
@@ -81,6 +81,28 @@
                         </div>
                     </div>
 
+                    <div class="control-section actions-section">
+                        <h3 class="section-title">Akcje gracza</h3>
+                        <div class="control-group">
+                            <div class="action-row">
+                                <div class="action-item">
+                                    <label class="action-label">Ustaw slot</label>
+                                    <div class="action-input-group">
+                                        <input type="number" id="slotInput" min="0" max="8" value="0" class="action-input">
+                                        <button id="setSlotButton" class="action-button secondary">
+                                            <svg viewBox="0 0 24 24" fill="none" stroke="currentColor">
+                                                <rect x="3" y="3" width="18" height="18" rx="2" ry="2"></rect>
+                                                <line x1="9" y1="3" x2="9" y2="21"></line>
+                                            </svg>
+                                            WYŚLIJ
+                                        </button>
+                                    </div>
+                                    <span class="action-hint">Sloty: 0-8 (0 = pierwszy slot)</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
                     <div class="control-section danger-section">
                         <h3 class="section-title">Zarządzanie graczem</h3>
                         <div class="control-group">
