--- a/public/panel/index.html
+++ b/public/panel/index.html
@@ -96,7 +96,6 @@
                                             WYŚLIJ
                                         </button>
                                     </div>
-                                    <span class="action-hint">Sloty: 0-8</span>
                                 </div>
                                 <div class="action-item">
                                     <label class="action-label">Przyciski myszy</label>
@@ -115,6 +114,37 @@
                                             </svg>
                                             PRAWY
                                         </button>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="action-row">
+                                <div class="action-item full-width">
+                                    <label class="action-label">Kliknięcie w GUI</label>
+                                    <div class="gui-click-container">
+                                        <div class="gui-click-row">
+                                            <input type="number" id="guiSlotInput" min="0" value="0"
+                                                class="action-input" placeholder="Slot">
+                                            <label class="shift-checkbox">
+                                                <input type="checkbox" id="guiShiftCheckbox">
+                                                <span>SHIFT</span>
+                                            </label>
+                                        </div>
+                                        <div class="gui-click-buttons">
+                                            <button id="guiLeftClickButton" class="action-button secondary">
+                                                <svg viewBox="0 0 24 24" fill="none" stroke="currentColor">
+                                                    <rect x="3" y="3" width="18" height="18" rx="2" ry="2"></rect>
+                                                    <path d="M9 12l2 2 4-4"></path>
+                                                </svg>
+                                                LEWY
+                                            </button>
+                                            <button id="guiRightClickButton" class="action-button secondary">
+                                                <svg viewBox="0 0 24 24" fill="none" stroke="currentColor">
+                                                    <rect x="3" y="3" width="18" height="18" rx="2" ry="2"></rect>
+                                                    <path d="M9 12l2 2 4-4"></path>
+                                                </svg>
+                                                PRAWY
+                                            </button>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
