--- a/public/panel/index.html
+++ b/public/panel/index.html
@@ -167,6 +167,42 @@
 
                     <div id="statusMessage" class="status-message"></div>
                 </div>
+
+                <div id="offlinePlayerControl" class="player-control offline-control hidden">
+                    <div class="control-header offline-header">
+                        <h2 class="offline-text" id="offlinePlayerName"></h2>
+                        <button id="closeOfflineControl" class="close-button">
+                            <span>×</span>
+                        </button>
+                    </div>
+
+                    <div class="control-section">
+                        <h3 class="section-title">Dołącz do serwera</h3>
+                        <div class="control-group">
+                            <div class="join-server-container">
+                                <input type="text" id="serverIpInput" class="action-input" placeholder="IP serwera">
+                                <input type="number" id="serverPortInput" class="action-input port-input"
+                                    placeholder="25565" value="25565">
+                            </div>
+                            <div class="resource-pack-container">
+                                <span class="resource-pack-label">Paczki Tekstur:</span>
+                                <button id="resourcePackToggle" class="toggle-button enabled">
+                                    <span class="toggle-text">ENABLED</span>
+                                </button>
+                            </div>
+                            <button id="joinServerButton" class="action-button primary">
+                                <svg viewBox="0 0 24 24" fill="none" stroke="currentColor">
+                                    <path d="M15 3h4a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2h-4"></path>
+                                    <polyline points="10 17 15 12 10 7"></polyline>
+                                    <line x1="15" y1="12" x2="3" y2="12"></line>
+                                </svg>
+                                DOŁĄCZ
+                            </button>
+                        </div>
+                    </div>
+
+                    <div id="offlineStatusMessage" class="status-message"></div>
+                </div>
             </main>
         </div>
     </div>
