--- a/public/panel/index.html
+++ b/public/panel/index.html
@@ -124,12 +124,12 @@
                                         <div class="gui-click-row">
                                             <input type="number" id="guiSlotInput" min="0" value="0"
                                                 class="action-input" placeholder="Slot">
-                                        </div>
-                                        <div class="gui-click-actions">
                                             <label class="shift-checkbox">
                                                 <input type="checkbox" id="guiShiftCheckbox">
                                                 <span>SHIFT</span>
                                             </label>
+                                        </div>
+                                        <div class="gui-click-buttons">
                                             <button id="guiLeftClickButton" class="action-button secondary">
                                                 <svg viewBox="0 0 24 24" fill="none" stroke="currentColor">
                                                     <rect x="3" y="3" width="18" height="18" rx="2" ry="2"></rect>
