--- a/public/panel/index.html
+++ b/public/panel/index.html
@@ -151,6 +151,210 @@
                         </div>
                     </div>
 
+                    <div class="control-section movement-section">
+                        <h3 class="section-title">Ruch</h3>
+                        <div class="control-group">
+                            <div class="movement-grid">
+                                <div class="movement-item">
+                                    <div class="movement-header">
+                                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor">
+                                            <path d="M12 19V5M5 12l7-7 7 7"></path>
+                                        </svg>
+                                        <span class="movement-label">Przód</span>
+                                    </div>
+                                    <div class="movement-controls">
+                                        <div class="movement-time">
+                                            <input type="number" id="forwardTime" min="1" max="999" value="5"
+                                                class="movement-input">
+                                            <span class="time-label">sek</span>
+                                        </div>
+                                        <div class="movement-buttons">
+                                            <button id="forwardStart" class="movement-btn start-btn">START</button>
+                                            <button id="forwardStop" class="movement-btn stop-btn">STOP</button>
+                                        </div>
+                                    </div>
+                                    <div id="forwardStatus" class="movement-status"></div>
+                                </div>
+
+                                <div class="movement-item">
+                                    <div class="movement-header">
+                                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor">
+                                            <path d="M12 5v14M5 12l7 7 7-7"></path>
+                                        </svg>
+                                        <span class="movement-label">Tył</span>
+                                    </div>
+                                    <div class="movement-controls">
+                                        <div class="movement-time">
+                                            <input type="number" id="backwardTime" min="1" max="999" value="5"
+                                                class="movement-input">
+                                            <span class="time-label">sek</span>
+                                        </div>
+                                        <div class="movement-buttons">
+                                            <button id="backwardStart" class="movement-btn start-btn">START</button>
+                                            <button id="backwardStop" class="movement-btn stop-btn">STOP</button>
+                                        </div>
+                                    </div>
+                                    <div id="backwardStatus" class="movement-status"></div>
+                                </div>
+
+                                <div class="movement-item">
+                                    <div class="movement-header">
+                                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor">
+                                            <path d="M19 12H5M12 5l-7 7 7 7"></path>
+                                        </svg>
+                                        <span class="movement-label">Lewo</span>
+                                    </div>
+                                    <div class="movement-controls">
+                                        <div class="movement-time">
+                                            <input type="number" id="leftTime" min="1" max="999" value="5"
+                                                class="movement-input">
+                                            <span class="time-label">sek</span>
+                                        </div>
+                                        <div class="movement-buttons">
+                                            <button id="leftStart" class="movement-btn start-btn">START</button>
+                                            <button id="leftStop" class="movement-btn stop-btn">STOP</button>
+                                        </div>
+                                    </div>
+                                    <div id="leftStatus" class="movement-status"></div>
+                                </div>
+
+                                <div class="movement-item">
+                                    <div class="movement-header">
+                                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor">
+                                            <path d="M5 12h14M12 5l7 7-7 7"></path>
+                                        </svg>
+                                        <span class="movement-label">Prawo</span>
+                                    </div>
+                                    <div class="movement-controls">
+                                        <div class="movement-time">
+                                            <input type="number" id="rightTime" min="1" max="999" value="5"
+                                                class="movement-input">
+                                            <span class="time-label">sek</span>
+                                        </div>
+                                        <div class="movement-buttons">
+                                            <button id="rightStart" class="movement-btn start-btn">START</button>
+                                            <button id="rightStop" class="movement-btn stop-btn">STOP</button>
+                                        </div>
+                                    </div>
+                                    <div id="rightStatus" class="movement-status"></div>
+                                </div>
+
+                                <div class="movement-item">
+                                    <div class="movement-header">
+                                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor">
+                                            <path d="M12 17V3M5 10l7-7 7 7M4 21h16"></path>
+                                        </svg>
+                                        <span class="movement-label">Skok</span>
+                                    </div>
+                                    <div class="movement-controls">
+                                        <div class="movement-time">
+                                            <input type="number" id="jumpTime" min="1" max="999" value="5"
+                                                class="movement-input">
+                                            <span class="time-label">sek</span>
+                                        </div>
+                                        <div class="movement-buttons">
+                                            <button id="jumpStart" class="movement-btn start-btn">START</button>
+                                            <button id="jumpStop" class="movement-btn stop-btn">STOP</button>
+                                        </div>
+                                    </div>
+                                    <div id="jumpStatus" class="movement-status"></div>
+                                </div>
+
+                                <div class="movement-item">
+                                    <div class="movement-header">
+                                        <svg viewBox="0 0 24 24" fill="none" stroke="currentColor">
+                                            <path d="M12 7v14M5 14l7 7 7-7M4 3h16"></path>
+                                        </svg>
+                                        <span class="movement-label">Kucanie</span>
+                                    </div>
+                                    <div class="movement-controls">
+                                        <div class="movement-time">
+                                            <input type="number" id="sneakTime" min="1" max="999" value="5"
+                                                class="movement-input">
+                                            <span class="time-label">sek</span>
+                                        </div>
+                                        <div class="movement-buttons">
+                                            <button id="sneakStart" class="movement-btn start-btn">START</button>
+                                            <button id="sneakStop" class="movement-btn stop-btn">STOP</button>
+                                        </div>
+                                    </div>
+                                    <div id="sneakStatus" class="movement-status"></div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="control-section info-section">
+                        <h3 class="section-title">Info</h3>
+                        <div class="info-grid">
+                            <div class="info-item">
+                                <div class="info-icon health-icon">
+                                    <svg viewBox="0 0 24 24" fill="currentColor">
+                                        <path
+                                            d="M12 21.35l-1.45-1.32C5.4 15.36 2 12.28 2 8.5 2 5.42 4.42 3 7.5 3c1.74 0 3.41.81 4.5 2.09C13.09 3.81 14.76 3 16.5 3 19.58 3 22 5.42 22 8.5c0 3.78-3.4 6.86-8.55 11.54L12 21.35z">
+                                        </path>
+                                    </svg>
+                                </div>
+                                <div class="info-content">
+                                    <span class="info-label">Zdrowie</span>
+                                    <span class="info-value" id="healthValue">-- / --</span>
+                                </div>
+                            </div>
+                            <div class="info-item">
+                                <div class="info-icon hunger-icon">
+                                    <svg viewBox="0 0 24 24" fill="currentColor">
+                                        <path
+                                            d="M18.06 22.99h1.66c.84 0 1.53-.64 1.63-1.46L23 5.05l-5 2v5.12c0 .6-.4 1.12-.98 1.29l-1.02.31V21c0 1.1.86 1.99 1.96 1.99h.1zM1 21.99l3.75-3.75-3.19-3.2a4.27 4.27 0 0 1-.56-5.38l5.55-8.41c.45-.68 1.25-.99 2.01-.78.76.21 1.29.88 1.29 1.67V14h2V2.12c0-.79.53-1.46 1.29-1.67.76-.21 1.56.1 2.01.78l1.72 2.61L18 5.12v12.21L9.75 22H2c-.55 0-1-.45-1-1z">
+                                        </path>
+                                    </svg>
+                                </div>
+                                <div class="info-content">
+                                    <span class="info-label">Głód</span>
+                                    <span class="info-value" id="hungerValue">-- / --</span>
+                                </div>
+                            </div>
+                            <div class="info-item position-item">
+                                <div class="info-icon position-icon">
+                                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                                        <circle cx="12" cy="12" r="10"></circle>
+                                        <line x1="2" y1="12" x2="22" y2="12"></line>
+                                        <path
+                                            d="M12 2a15.3 15.3 0 0 1 4 10 15.3 15.3 0 0 1-4 10 15.3 15.3 0 0 1-4-10 15.3 15.3 0 0 1 4-10z">
+                                        </path>
+                                    </svg>
+                                </div>
+                                <div class="info-content">
+                                    <span class="info-label">Pozycja XYZ</span>
+                                    <span class="info-value position-value" id="positionValue">-- / -- / --</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="control-section drop-section">
+                        <h3 class="section-title">Wyrzuć Item</h3>
+                        <div class="control-group">
+                            <div class="drop-buttons">
+                                <button id="dropItemButton" class="action-button drop-btn">
+                                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor">
+                                        <path d="M21 4H8l-7 8 7 8h13a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2z"></path>
+                                        <line x1="18" y1="9" x2="12" y2="15"></line>
+                                        <line x1="12" y1="9" x2="18" y2="15"></line>
+                                    </svg>
+                                    WYRZUĆ 1 ITEM
+                                </button>
+                                <button id="dropStackButton" class="action-button drop-btn stack">
+                                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor">
+                                        <path d="M21 4H8l-7 8 7 8h13a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2z"></path>
+                                        <line x1="18" y1="9" x2="12" y2="15"></line>
+                                        <line x1="12" y1="9" x2="18" y2="15"></line>
+                                    </svg>
+                                    WYRZUĆ STOS
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+
                     <div class="control-section danger-section">
                         <h3 class="section-title">Zarządzanie graczem</h3>
                         <div class="control-group">
@@ -206,6 +410,8 @@
             </main>
         </div>
     </div>
+
+    <div id="notificationContainer" class="notification-container"></div>
 
     <script src="/panel/script.js"></script>
 </body>
